# mr_mnist

./: CMakeLists.txt  README.md
include/mr_mnist/: mr_mnist.hpp
include/world/zachariahs/mr_mnist/: deep_neural_network.hpp  math.hpp  resources.hpp
src/: main.cpp
src/world/zachariahs/mr_mnist/: main.cpp
